	GESpecies.BigTreeException made static
	Added (essentially empty) Particle.hashCode()
	Ruleset.addRule no longer checks if numRules == 0
	SimpleBreeder.EliteComparator made static
	Output.println and Output.print now indicate the correct log
		number when throwing exceptions
	Output.getThrowsErrors() made synchronized
	Output.Announcement made static
	ParameterDatabase._getShadowedValues made synchronized
	ThreadPool.joinAll() if changed to while for wait()
	Minor fixes kicked up by FindBugs.  FindBugs finds a lot of non-bugs.
		For future reference, command was:
		./fb analyze -sortByClass ~/java/ecj/jar/ecj.22.jar |& \
		grep -v "Unchecked/unconfirmed cast" | \
		grep -v "default encoding" | \
		grep -v "may expose internal representation" | \
		grep -v "isn't final but should be refactored to be so" | \
		grep -v "+ in a loop" | \
		grep -v "should be package protected"
	All bad default cases now throw fatal just in case
	Reindented
	ec/app/async removed
	ec/app/coevolve2/coevolve1.params renamed to coevolve2.params
	Typo fix to ec/app/coevolve2/coevolve2.params
	GUI should now properly handle default subpopulations
	Bug fix to mona.params, which was using "$" file names for its images
	Modified SimpleBreeder.usingElites method so it considers elites of
		0 number as "not using" (which is correct)
	Fix to over-zealous default inclusion in RandTree.java
	Bug fixes to some errors in the byte->int revision of the ge package
	Added bit-flip mutation to SAT
	SAT now properly loads filenames, not strings, from the parameters
	spatialcoevolve.params now runs using default subpops
	Various bugfixes to ecsuite/es.params
	Changes "muzzle" to "silent" in various params files

23 Ecco la Prerelease!
	SlaveMonitor.shutdown() now kills all the threads in the thread pool.
		Thanks to Eric 'Siggy' Scott <escott8@gmu.edu>
	Modified serialization mechanism for ThreadPool so that it's a bit more
		threadsafe.
	Updates to the manual to discuss multithreaded simulation